change deployment url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://meghasamala.github.io/reactfolio",
+  "homepage": "https://meghasamala.github.io/reactfolio/",
   "name": "reactfolio",
   "version": "0.1.0",
   "private": true,
